Updated counts for unmapped reads

--- a/templates/summarize_read_counts_small.ipynb
+++ b/templates/summarize_read_counts_small.ipynb
@@ -15,10 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "sns.set_style('whitegrid')\n",
     "import pandas as pd\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "import re"
    ]
   },
   {
@@ -27,28 +26,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_table('read_counts.txt', index_col=0)\n",
+    "counts = pd.read_table('read_counts.txt', index_col=0).T\n",
     "\n",
-    "rna_types = [s.split('.')[0] for s in df.index.tolist() if s.endswith('.mapped')]\n",
-    "rna_types = 'rRNA,miRNA,piRNA,Y_RNA,srpRNA,tRNA,snRNA,snoRNA,lncRNA,mRNA,tucpRNA,intron,promoter,enhancer,repeats,circRNA,other'.split(',')\n",
+    "rna_types = [s.split('.')[0] for s in counts.index.tolist() if s.endswith('.mapped')]\n",
+    "rna_types = 'rRNA,miRNA,piRNA,Y_RNA,srpRNA,tRNA,snRNA,snoRNA,lncRNA,mRNA,tucpRNA'.split(',')\n",
+    "nongene_types = ['intron', 'promoter', 'enhancer', 'repeats', 'circRNA']\n",
     "\n",
     "def gradient_func(val):\n",
     "    return '<span style=\"background: linear-gradient(90deg, #d65f5f {0}%, transparent 0%)\">{0:.3f}</span>'.format(val)\n",
     "\n",
-    "# mapped ratio\n",
-    "mapped_ratio = {}\n",
-    "for sample_id in df.columns.tolist():\n",
-    "    mapped_ratio[sample_id] = {}\n",
-    "    clean_counts = float(df.loc['clean.unmapped', sample_id])\n",
-    "    for rna_type in rna_types:\n",
-    "        mapped_ratio[sample_id][rna_type] = df.loc[rna_type + '.mapped', sample_id]/(\n",
-    "            clean_counts - df.loc['other.unmapped', sample_id])\n",
-    "    for region in ('promoter', 'enhancer', 'intron', 'repeats', 'circRNA'):\n",
-    "        mapped_ratio[sample_id]['other'] -= mapped_ratio[sample_id][region]\n",
-    "    #mapped_ratio[sample_id]['unmapped'] = 1.0 - sum(list(mapped_ratio[sample_id].values()))\n",
-    "mapped_ratio = pd.DataFrame.from_records(mapped_ratio)*100\n",
-    "mapped_ratio = mapped_ratio.loc[rna_types, :]\n",
-    "display(mapped_ratio.T.style\\\n",
+    "columns = ['clean.unmapped']\n",
+    "for rna_type in rna_types + nongene_types:\n",
+    "    if rna_type + '.mapped' in counts.columns:\n",
+    "        columns.append(rna_type + '.mapped')\n",
+    "columns.append('other.mapped')\n",
+    "counts = counts.loc[:, columns]\n",
+    "counts.rename(columns={key:re.sub('(\\.mapped)|(\\.unmapped)$', '', key) for key in columns}, inplace=True)\n",
+    "counts['unmapped'] = counts['clean'].subtract(counts.loc[:, rna_types + ['other']].sum(axis=1), axis=0)\n",
+    "counts = counts.loc[:, ['clean'] + rna_types + nongene_types + ['unmapped']]\n",
+    "display(counts.style \\\n",
+    "        .set_caption('Read counts'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percent_by_clean = counts.copy()\n",
+    "percent_by_clean = 100*percent_by_clean.div(percent_by_clean.loc[:, 'clean'], axis=0)\n",
+    "percent_by_clean.drop(columns='clean', inplace=True)\n",
+    "display(percent_by_clean.style \\\n",
+    "            .set_caption('Reads percentage by clean reads') \\\n",
     "            .format(gradient_func))"
    ]
   },
@@ -58,7 +68,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(mapped_ratio.mean(axis=1).to_frame().style\\\n",
+    "display(percent_by_clean.mean(axis=0).to_frame().T.style \\\n",
+    "            .set_caption('Average reads percentage by clean reads') \\\n",
+    "            .format(gradient_func))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percent_by_mapped = counts.copy()\n",
+    "percent_by_mapped = 100*percent_by_mapped.div(percent_by_mapped['clean'] - percent_by_mapped['unmapped'], axis=0)\n",
+    "percent_by_mapped.drop(columns=['clean', 'unmapped'], inplace=True)\n",
+    "display(percent_by_mapped.style \\\n",
+    "            .set_caption('Reads percentage by mapped') \\\n",
+    "            .format(gradient_func))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(percent_by_mapped.mean(axis=0).to_frame().T.style \\\n",
+    "            .set_caption('Averge reads percentage by mapped reads') \\\n",
     "            .format(gradient_func))"
    ]
   },
@@ -86,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
