--- a/templates/summarize_mapping_star.ipynb
+++ b/templates/summarize_mapping_star.ipynb
@@ -1905,7 +1905,7 @@
     }
    ],
    "source": [
-    "summary = pd.read_table('../output/BRCA_exosome_Xiehe_long/summary/mapping_star.txt', sep='\\t')\n",
+    "summary = pd.read_table('mapping_star.txt', sep='\\t')\n",
     "summary.set_index(['sample_id', 'map_step'], inplace=True)\n",
     "display(summary.style.set_caption('Summary'))"
    ]
@@ -3047,7 +3047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
