Added spikein mapping (small)

--- a/templates/summarize_read_counts_small.ipynb
+++ b/templates/summarize_read_counts_small.ipynb
@@ -29,7 +29,7 @@
     "counts = pd.read_table('read_counts.txt', index_col=0).T\n",
     "\n",
     "rna_types = [s.split('.')[0] for s in counts.index.tolist() if s.endswith('.mapped')]\n",
-    "rna_types = 'rRNA,miRNA,piRNA,Y_RNA,srpRNA,tRNA,snRNA,snoRNA,lncRNA,mRNA,tucpRNA'.split(',')\n",
+    "rna_types = 'spikein,rRNA,miRNA,piRNA,Y_RNA,srpRNA,tRNA,snRNA,snoRNA,lncRNA,mRNA,tucpRNA'.split(',')\n",
     "nongene_types = ['intron', 'promoter', 'enhancer', 'repeats', 'circRNA']\n",
     "\n",
     "def gradient_func(val):\n",
