Fixed negative counts in unmapped

--- a/templates/summarize_read_counts_small.ipynb
+++ b/templates/summarize_read_counts_small.ipynb
@@ -26,11 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts = pd.read_table('read_counts.txt', index_col=0).T\n",
+    "counts = pd.read_table('../output/test_small/summary/read_counts.txt', index_col=0).T\n",
     "\n",
     "rna_types = [s.split('.')[0] for s in counts.index.tolist() if s.endswith('.mapped')]\n",
     "rna_types = 'univec,spikein,rRNA,miRNA,piRNA,Y_RNA,srpRNA,tRNA,snRNA,snoRNA,lncRNA,mRNA,tucpRNA'.split(',')\n",
-    "nongene_types = ['intron', 'promoter', 'enhancer', 'repeats', 'circRNA']\n",
+    "nongene_types = ['intron', 'promoter', 'enhancer', 'repeats']\n",
     "\n",
     "def gradient_func(val):\n",
     "    return '<span style=\"background: linear-gradient(90deg, #d65f5f {0}%, transparent 0%)\">{0:.3f}</span>'.format(val)\n",
@@ -42,11 +42,14 @@
     "        columns.append(rna_type + '.mapped')\n",
     "        rna_types_enabled.append(rna_type)\n",
     "rna_types = rna_types_enabled\n",
-    "columns.append('other.mapped')\n",
+    "columns += ['other.mapped']\n",
+    "counts_unmapped = counts.loc[:, 'other.unmapped']\n",
     "counts = counts.loc[:, columns]\n",
     "counts.rename(columns={key:re.sub('(\\.mapped)|(\\.unmapped)$', '', key) for key in columns}, inplace=True)\n",
-    "counts['unmapped'] = counts['clean'].subtract(counts.loc[:, rna_types + ['other']].sum(axis=1), axis=0)\n",
-    "counts = counts.loc[:, ['clean'] + rna_types_enabled + ['unmapped']]\n",
+    "counts['unannotated'] = counts['other'].subtract(counts.loc[:, nongene_types].sum(axis=1), axis=0)\n",
+    "counts['unmapped'] = counts_unmapped\n",
+    "#counts['unmapped'] = counts['clean'].subtract(counts.loc[:, rna_types + ['other']].sum(axis=1), axis=0)\n",
+    "counts = counts.loc[:, ['clean'] + rna_types_enabled + ['unannotated', 'unmapped']]\n",
     "display(counts.style \\\n",
     "        .set_caption('Read counts'))"
    ]
