Fixed input file

--- a/templates/summarize_read_counts_small.ipynb
+++ b/templates/summarize_read_counts_small.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts = pd.read_table('../output/test_small/summary/read_counts.txt', index_col=0).T\n",
+    "counts = pd.read_table('read_counts.txt', index_col=0).T\n",
     "\n",
     "rna_types = [s.split('.')[0] for s in counts.index.tolist() if s.endswith('.mapped')]\n",
     "rna_types = 'univec,spikein,rRNA,miRNA,piRNA,Y_RNA,srpRNA,tRNA,snRNA,snoRNA,lncRNA,mRNA,tucpRNA'.split(',')\n",
